binrw/tests/ui/bad_args_type.stderr
error[E0308]: mismatched types
  --> tests/ui/bad_args_type.rs:11:10
   |
11 |     #[br(args(a))]
   |          ^^^^ expected struct `ItemBinReadArgs`, found tuple
12 |     c: Item,
   |        ---- expected due to this
   |
   = note: expected struct `ItemBinReadArgs`
               found tuple `(u8,)`
